--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,28 @@ main {
 
 form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 20px;
+  flex-flow: row wrap;
+  justify-content: center;
+  row-gap: 20px;
+  margin: 0 auto 20px auto;
   font-size: 20px;
+  width: 400px;
+}
+
+input,
+label {
+  width: 45%;
+}
+
+[type="checkbox"] {
+  width: auto;
+  accent-color: white;
+  width: 18px;
+}
+
+[type="file"] {
+  width: 60%;
+  text-align: center;
 }
 
 th,
@@ -31,6 +48,10 @@ caption {
   padding: 10px;
 }
 
+tbody > tr {
+  transition: 0.25s;
+}
+
 tbody > tr:hover {
   background-color: white;
   color: #242424;
@@ -44,6 +65,13 @@ input[type="submit"] {
   color: currentColor;
   background-color: inherit;
   font-size: 15px;
+  width: 60%;
+  transition: 0.25s;
+}
+
+input[type="submit"]:hover {
+  background-color: white;
+  color: #242424;
 }
 
 label {
